--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,8 +116,10 @@ nav:
   - 专题:
     - 单细胞专题: 
         - 单细胞上游分析: BioInfo/scRNAseq/scRNASeq_UP.md
+        - 了解Seurat对象: BioInfo/scRNAseq/SeuratObj.md
         - 单细胞下游分析: BioInfo/scRNAseq/scRNASeq_down.md
         - 常规分析案例一: BioInfo/scRNAseq/GSE130001.md
+        - 细胞注释-SingleR: BioInfo/scRNAseq/SingleR.md
     - RNAseq专题: 
         - Bulk RNAseq上游分析: BioInfo/RNAseq/pipeline_1.md
     - TCGA-GEO专题: 
