--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,8 @@ nav:
       - R包开发:
         - 软件安装: Programming/R/01-software.md
         - 快速手册: Programming/R/02-DevelopmentManual.md
+    - Python: 
+      - 语法基础: Programming/python/links.md
   - 生信基础:
     - BioInfo/index.md
     - 生信基础:
