--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,8 @@ nav:
       - 同源基因转换: BioInfo/BioInfoBasics/hsa2mus_2.md
       - 各种ID转换: BioInfo/BioInfoBasics/IDtrans.md
       - miRNA的ID转换: BioInfo/BioInfoBasics/miRNA_ID.md
+    - 软件使用问题:
+      - Hisat2: BioInfo/RNAseq/hisat2.md
   - 可视化:
     - 综合教程: Programming/R/ggplot2.md
     - 烟花状散点图: visualization/FireworksClusterScatterPlot.md
@@ -146,6 +148,7 @@ nav:
     - 癌症免疫编辑: Literature/Review/001_immunoediting.md
     - 癌症免疫治疗: Literature/Review/003_2021_immunotherapy.md
     - 药物靶点预测: Literature/Review/002_DTIS.md
+    - ICB治疗: Literature/Review/004_2021_ICB.md
   - 关于:
     - ABOUT/index.md # 使用两个index 这样子左上角第一次打开会是所有Tab 而不是ABOUT
     - 学生群: ABOUT/studentsGroup.md
