--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,7 +137,7 @@ nav:
         - 细胞注释-SingleR: BioInfo/scRNAseq/SingleR.md
         - 表型关联分析: BioInfo/scRNAseq/Scissor.md
         - cellChat: BioInfo/scRNAseq/CellChat.md
-        - scscMetabolism: BioInfo/scRNAseq/scMetabolism.md
+        - scMetabolism: BioInfo/scRNAseq/scMetabolism.md
     - RNAseq专题: 
         - Bulk RNAseq上游分析: BioInfo/RNAseq/pipeline_1.md
     - TCGA-GEO专题: 
