--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -162,7 +162,8 @@ nav:
     - 2023_HNSCC: Literature/scRNAseq/2023_NC_HNSCC.md
   - 微信:
     - WeChatOfficialAccount/HOME.md # 使用两个index 这样子左上角第一次打开会是所有Tab 而不是ABOUT
-    - 粉丝群: ABOUT/studentsGroup.md
+    - 文章索引: WeChatOfficialAccount/articleIndex.md
+    - 微信群: ABOUT/studentsGroup.md
   - 关于:
     - ABOUT/index.md # 使用两个index 这样子左上角第一次打开会是所有Tab 而不是ABOUT
     - 工具: ABOUT/announcement.md
