--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,7 +165,12 @@ nav:
   - 数据库工具:
     - 在线数据库: BioInfo/database/database.md
     - 工具或软件: BioInfo/toolsandsoftware/tands.md
-    - MedBioInfoCloud包: WeChatOfficialAccount/MedBioInfoCloud.md
+    - MedBioInfoCloud包: 
+      - WeChatOfficialAccount/MedBioInfoCloud.md
+      - 基础函数: package/baseFun.md
+      - Bulk RNA-Seq: package/BulkRNA-Seq.md
+      - 富集分析: package/enrichAnalysis.md
+      - TCGA数据挖掘: package/TCGA.md
   - 微信:
     - WeChatOfficialAccount/HOME.md # 使用两个index 这样子左上角第一次打开会是所有Tab 而不是ABOUT
     - 文章索引: WeChatOfficialAccount/articleIndex.md
