--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,7 +166,7 @@ nav:
     - 在线数据库: BioInfo/database/database.md
     - 工具或软件: BioInfo/toolsandsoftware/tands.md
     - MedBioInfoCloud包: 
-      - WeChatOfficialAccount/MedBioInfoCloud.md
+      - 安装: WeChatOfficialAccount/MedBioInfoCloud.md
       - 基础函数: package/baseFun.md
       - Bulk RNA-Seq: package/BulkRNA-Seq.md
       - 富集分析: package/enrichAnalysis.md
@@ -174,7 +174,6 @@ nav:
   - 微信:
     - WeChatOfficialAccount/HOME.md # 使用两个index 这样子左上角第一次打开会是所有Tab 而不是ABOUT
     - 文章索引: WeChatOfficialAccount/articleIndex.md
-    - MedBioInfoCloud: WeChatOfficialAccount/MedBioInfoCloud.md
   - 关于:
     - ABOUT/index.md # 使用两个index 这样子左上角第一次打开会是所有Tab 而不是ABOUT
     - 工具: ABOUT/announcement.md
