--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,7 @@ nav:
       - Hisat2: BioInfo/RNAseq/hisat2.md
   - 可视化:
     - 综合教程: Programming/R/ggplot2.md
+    - 公众号文章参考: docs/visualization/visualizationList.md
     - 散点图: visualization/ScatterPlot.md
     - 多重火山图: visualization/mult_volcano.md
     - 配色方案1: visualization/colorScheme01.md
